fix footer spacing

--- a/style/footer.css
+++ b/style/footer.css
@@ -4,7 +4,7 @@ footer{
 }
 
 .footer{
-  padding: 36px 0;
+  padding: 36px 0 14px 0;
   margin: 0 auto;
 }
 
